Changed SubscriptionType from Enum to class with price and name, added method that allow create subscription types. Method of exit also checks if car has abono.